# moovent-stack

./: .gitignore  CHANGELOG.md  README.md  VERSION  pyproject.toml
help/: CONFIGURATION.md  DEVELOPMENT.md  GETTING_STARTED.md  README.md  SECURITY.md  TROUBLESHOOTING.md
moovent_stack/: __init__.py  __main__.py  access.py  app.py  config.py  control.py  github.py  infisical.py  log.py  runner.py  storage.py  workspace.py
moovent_stack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
moovent_stack/admin/: __init__.py  __main__.py  access.py  config.py  deps.py  git_ops.py  github.py  logs.py  server.py  services.py  updates.py  watchdog.py
moovent_stack/admin/templates/: __init__.py  dashboard.html
moovent_stack/setup/: __init__.py  assets.py  server.py  templates.py
scripts/: build_release.py
tests/: test_access_unittest.py  test_admin_deps_unittest.py  test_admin_git_ops_unittest.py  test_admin_services_unittest.py  test_admin_watchdog_unittest.py  test_setup_server_unittest.py
